# krondor-iac

./: README.md
iac/: .env.sample
iac/ansible/: firewall.yml  service.yml
iac/ansible/service/: docker-compose.yml
iac/ansible/service/config/nginx/site-confs/: corpo.conf
iac/hosts/digitalOcean/: production
python-fast-api-htmx-sqlite/: .gitignore  Dockerfile  requirements.in  requirements.txt  tailwind.config.js
python-fast-api-htmx-sqlite/alembic/: env.py
python-fast-api-htmx-sqlite/app/: config.py  logger.py  server.py
python-fast-api-htmx-sqlite/app/database/: __init__.py  database.py  models.py
python-fast-api-htmx-sqlite/static/css/: main.css
python-fast-api-htmx-sqlite/styles/: main.css
python-fast-api-htmx-sqlite/templates/home/: base.html  header.html  index.html  index_content.html
rust-axum-sqlite/: Cargo.toml  Dockerfile  Makefile  README.md  deny.toml
rust-axum-sqlite/.sqlx/: query-d61f8f16d251ef6dcbff0102d89db0ff83388fde39bfb822f16dc5c89a77a18d.json
rust-axum-sqlite/migrations/: 20240414015317_examples.up.sql
rust-axum-sqlite/src/: lib.rs  main.rs
rust-axum-sqlite/src/api/: mod.rs
rust-axum-sqlite/src/app/: config.rs  state.rs
rust-axum-sqlite/src/database/models/: mod.rs
rust-axum-sqlite/src/database/types/: example.rs  mod.rs
rust-axum-sqlite/src/server/: mod.rs
